--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-fx-layout": "^3.0.4",
     "luxon": "^3.5.0",
     "material-icons": "^1.13.12",
+    "ngx-mat-timepicker": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
