Assests folder - Production - Path issue

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
             "outputPath": {
               "base": "dist/portfolio"
             },
+            "baseHref": "/portfolio/",
             "index": "src/index.html",
             "polyfills": [],
             "tsConfig": "tsconfig.app.json",
